# GTest-CMake-Calculator

./: .gitignore  .gitmodules  CMakeLists.txt  Calculator.cpp  Calculator.hpp  Readme.md
build-vscode/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Calculator.sln  Calculator.vcxproj  Calculator.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  compile_commands.json
build-vscode/Calculator.dir/Debug/Calculator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  (+1 more)
build-vscode/Debug/: Calculator.lib
build-vscode/Testing/: TAG
build-vscode/Testing/20220823-1544/: Test.xml
build-vscode/Testing/Temporary/: CTestCostData.txt
build-vscode/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  googletest-distribution.sln
build-vscode/googletest/googlemock/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  gmock.sln  gmock.vcxproj  gmock.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters
build-vscode/googletest/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
build-vscode/lib/Debug/: gtest_main.lib
build-vscode/test/: CTestTestfile.cmake  CalculatorTests.vcxproj  CalculatorTests.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
test/: CMakeLists.txt  CalculatorTests.cpp
(+88 files in other folders)
